fix readability

--- a/themes/phrck/static/css/main.css
+++ b/themes/phrck/static/css/main.css
@@ -1,8 +1,3 @@
-@font-face {
-  font-family: "Inconsolata";
-  src: url(/fonts/inconsolata/Inconsolata.otf) format("truetype");
-}
-
 body {
   font-family: 'Inconsolata', 'Monospace';
   color: #1F2429;
@@ -30,7 +25,7 @@ a:hover, a:focus {
 }
 
 p {
-  text-align: justify;
+  line-height: 1.4;
 }
 
 table {
